--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,76 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+.navbar {
+	background-color: white !important;
+	color: black;
+}
+.navbar a {
+	color: inherit;
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: $body-color;
+		color: $body-bg;
+	}
+
+	.card {
+		background-color: black;
+	}
+	.card-header,
+	.card-footer {
+		background-color: lighten(black, 6%);
+	}
+
+	.navbar {
+		background-color: black !important;
+		color: white;
+	}
+	.navbar a {
+		color: inherit;
+	}
+
+	.dropdown-menu {
+		background-color: black;
+		border-color: rgba(white, .075);
+		color: $body-bg;
+	}
+	.dropdown-item:hover,
+	.dropdown-item:focus {
+		background-color: lighten(black, 5%);
+		color: white;
+	}
+	.dropdown-divider {
+		border-top-color: lighten(black, 10%);
+	}
+
+	.list-group-item {
+		background-color: black;
+	}
+	.list-group-item-action {
+		color: $body-bg;
+	}
+	.list-group-item-action:hover,
+	.list-group-item-action:focus {
+		background-color: lighten(black, 10%);
+		color: white;
+	}
+
+	.form-control,
+	.custom-select {
+		background-color: darken($body-color, 3%);
+		border-color: lighten($body-color, 10%);
+		color: $body-bg;
+	}
+	.form-control:focus,
+	.custom-select:focus {
+		background-color: darken($body-color, 6%);
+		color: white;
+	}
+	.input-group-text {
+		background-color: darken($body-color, 6%);
+		border-color: lighten($body-color, 10%);
+	}
+}
