--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -79,3 +79,38 @@
 		border-color: lighten($body-color, 10%);
 	}
 }
+
+@import '~quill/dist/quill.snow.css';
+.ql-snow {
+	.ql-picker-options {
+		background-color: $body-color;
+		color: $body-bg;
+	}
+	&.ql-toolbar button,
+	.ql-toolbar button,
+	.ql-picker-label {
+		color: $body-bg;
+	}
+	.ql-stroke {
+		stroke: $body-bg;
+	}
+}
+.ql-container {
+	overflow-y: auto;
+	resize: vertical;
+}
+.ql-editor {
+	padding: 0;
+
+	p { @extend p; }
+	ol { @extend ol; }
+	ul { @extend ul; }
+	pre { @extend pre; }
+	blockquote { @extend blockquote; }
+	h1 { @extend h1; }
+	h2 { @extend h2; }
+	h3 { @extend h3; }
+	h4 { @extend h4; }
+	h5 { @extend h5; }
+	h6 { @extend h6; }
+}
