--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,19 +1,58 @@
-// Body
-$body-bg: #f8fafc;
-
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-main: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-title: 'Montserrat', Verdana, sans-serif;
 $font-size-base: 0.9rem;
+$font-weight-base: 400;
+$font-weight-bold: 700;
 $line-height-base: 1.6;
 
+// Sizes
+$sizes: (
+	"container": 80rem,
+	"navbar-height": 4rem,
+	"navbar-font": 1.25rem,
+	"radius": 2px,
+	"shadow-x": 0,
+	"shadow-x-hover": 0,
+	"shadow-y": 3px,
+	"shadow-y-hover": 4px,
+	"shadow-spread": 5px,
+	"shadow-spread-hover": 8px,
+);
+
 // Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+$colors: (
+	"blue": #3490dc,
+	"indigo": #6574cd,
+	"purple": #9561e2,
+	"pink": #f66d9b,
+	"red": #e3342f,
+	"orange": #f6993f,
+	"yellow": #ffed4a,
+	"green": #38c172,
+	"teal": #4dc0b5,
+	"cyan": #6cb2eb,
+
+	"body-bg": #f8fafc,
+	"body-color": #202020,
+	"navbar-bg": #000,
+	"navbar-color": #f4f4f4,
+	"shadow": rgba(0, 0, 0, .4),
+	"shadow-hover": rgba(0, 0, 0, .7),
+);
+
+:root {
+	--font-family-main: $font-family-main;
+	--font-family-title: $font-family-title;
+	--font-size-base: $font-size-base;
+	--font-weight-base: $font-weight-base;
+	--line-height-base: $line-height-base;
+
+	@each $name, $value in $sizes {
+		--size-#{$name}: #{$value};
+	}
+
+	@each $name, $value in $colors {
+		--color-#{$name}: #{$value};
+	}
+}
