Start dashboard redesign

--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,46 +1,14 @@
 :root {
-  --font-family-main: $font-family-main;
-  --font-family-title: $font-family-title;
-  --font-size-base: $font-size-base;
-  --font-weight-base: $font-weight-base;
-  --line-height-base: $line-height-base;
-  --size-container: 80rem;
-  --size-navbar-height: 4rem;
-  --size-navbar-font: 1.25rem;
-  --size-radius: 2px;
-  --size-shadow-x: 0;
-  --size-shadow-x-hover: 0;
-  --size-shadow-y: 3px;
-  --size-shadow-y-hover: 4px;
-  --size-shadow-spread: 5px;
-  --size-shadow-spread-hover: 8px;
-  --color-blue: #3490dc;
-  --color-indigo: #6574cd;
-  --color-purple: #9561e2;
-  --color-pink: #f66d9b;
-  --color-red: #e3342f;
-  --color-orange: #f6993f;
-  --color-yellow: #ffed4a;
-  --color-green: #38c172;
-  --color-teal: #4dc0b5;
-  --color-cyan: #6cb2eb;
-  --color-body-bg: #f8fafc;
-  --color-body-color: #202020;
-  --color-navbar-bg: #000;
-  --color-navbar-color: #f4f4f4;
-  --color-shadow: rgba(0, 0, 0, 0.4);
-  --color-shadow-hover: rgba(0, 0, 0, 0.7);
-}
-
-:root {
   --font-family-main: Helvetica Neue, Helvetica, Arial, sans-serif;
   --font-family-title: Montserrat, Verdana, sans-serif;
-  --font-size-base: 0.9rem;
+  --font-size-base: 1rem;
   --font-weight-base: 400;
   --line-height-base: 1.6;
   --size-container: 80rem;
   --size-navbar-height: 4rem;
   --size-navbar-font: 1.25rem;
+  --size-sidebar-width: 18rem;
+  --size-column-min-width: 22rem;
   --size-radius: 2px;
   --size-shadow-x: 0;
   --size-shadow-x-hover: 0;
@@ -48,22 +16,62 @@
   --size-shadow-y-hover: 4px;
   --size-shadow-spread: 5px;
   --size-shadow-spread-hover: 8px;
-  --color-blue: #3490dc;
-  --color-indigo: #6574cd;
-  --color-purple: #9561e2;
-  --color-pink: #f66d9b;
-  --color-red: #e3342f;
-  --color-orange: #f6993f;
-  --color-yellow: #ffed4a;
-  --color-green: #38c172;
-  --color-teal: #4dc0b5;
-  --color-cyan: #6cb2eb;
+  --color-navy: #326a8c;
+  --color-yellow: #f2a71b;
+  --color-orange: #f25749;
+  --color-red: #f25050;
+  --color-grey: #bfbfbf;
   --color-body-bg: #f8fafc;
   --color-body-color: #202020;
-  --color-navbar-bg: #000;
-  --color-navbar-color: #f4f4f4;
-  --color-shadow: rgba(0, 0, 0, 0.4);
-  --color-shadow-hover: rgba(0, 0, 0, 0.7);
+  --color-navbar-bg: #f2a71b;
+  --color-navbar-color: #fff;
+  --color-shadow: rgba(0, 0, 0, 0.2);
+  --color-shadow-hover: rgba(0, 0, 0, 0.4);
+  --color-shadow-dark: rgba(0, 0, 0, 0.4);
+  --color-shadow-dark-hover: rgba(0, 0, 0, 0.7);
+  --color-sidebar-bg: #fff;
+  --color-sidebar: #202020;
+  --color-sidebar-disabled: #404040;
+  --color-sidebar-hover-bg: #fafafa;
+  --color-sidebar-hover: #323232;
+}
+
+:root {
+  --font-family-main: Helvetica Neue, Helvetica, Arial, sans-serif;
+  --font-family-title: Montserrat, Verdana, sans-serif;
+  --font-size-base: 1rem;
+  --font-weight-base: 400;
+  --line-height-base: 1.6;
+  --size-container: 80rem;
+  --size-navbar-height: 4rem;
+  --size-navbar-font: 1.25rem;
+  --size-sidebar-width: 18rem;
+  --size-column-min-width: 22rem;
+  --size-radius: 2px;
+  --size-shadow-x: 0;
+  --size-shadow-x-hover: 0;
+  --size-shadow-y: 3px;
+  --size-shadow-y-hover: 4px;
+  --size-shadow-spread: 5px;
+  --size-shadow-spread-hover: 8px;
+  --color-navy: #326a8c;
+  --color-yellow: #f2a71b;
+  --color-orange: #f25749;
+  --color-red: #f25050;
+  --color-grey: #bfbfbf;
+  --color-body-bg: #f8fafc;
+  --color-body-color: #202020;
+  --color-navbar-bg: #f2a71b;
+  --color-navbar-color: #fff;
+  --color-shadow: rgba(0, 0, 0, 0.2);
+  --color-shadow-hover: rgba(0, 0, 0, 0.4);
+  --color-shadow-dark: rgba(0, 0, 0, 0.4);
+  --color-shadow-dark-hover: rgba(0, 0, 0, 0.7);
+  --color-sidebar-bg: #fff;
+  --color-sidebar: #202020;
+  --color-sidebar-disabled: #404040;
+  --color-sidebar-hover-bg: #fafafa;
+  --color-sidebar-hover: #323232;
 }
 
 html,
@@ -95,6 +103,31 @@ a:active {
   text-decoration: none;
 }
 
+[hidden] {
+  display: none;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
+.sr-only-focusable:active,
+.sr-only-focusable:focus {
+  position: static;
+  width: auto;
+  height: auto;
+  overflow: visible;
+  clip: auto;
+  white-space: normal;
+}
+
 .container {
   margin-left: auto;
   margin-right: auto;
@@ -103,15 +136,21 @@ a:active {
 }
 
 .navbar {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  z-index: 99;
   height: var(--size-navbar-height);
   background-color: var(--color-navbar-bg);
   color: var(--color-navbar-color);
   font-size: var(--size-navbar-font);
   line-height: var(--size-navbar-font);
+  box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow-dark);
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
 }
 
 .navbar a {
@@ -121,7 +160,7 @@ a:active {
 .navbar a:focus,
 .navbar a:hover,
 .navbar a:active {
-  color: #ffffff;
+  color: #fff;
 }
 
 .navbar .navbar-item {
@@ -129,13 +168,6 @@ a:active {
   float: left;
   height: var(--size-navbar-height);
   padding: calc((var(--size-navbar-height) - var(--size-navbar-font)) / 2) calc(var(--size-navbar-font) / 2);
-}
-
-.navbar > .container {
-  display: flex;
-  flex-direction: row;
-  align-content: center;
-  justify-content: center;
 }
 
 .navbar .navbar-left {
@@ -228,13 +260,13 @@ a:active {
   color: #292929;
   text-decoration: none;
   border-radius: var(--size-radius);
-  box-shadow: var(--size-shadow-x) var(--size-shadow-y) var(--size-shadow-spread) var(--color-shadow);
+  box-shadow: var(--size-shadow-x) var(--size-shadow-y) var(--size-shadow-spread) var(--color-shadow-dark);
   transition: box-shadow linear 150ms, color linear 150ms;
 }
 
 .sports-list a:hover,
 .sports-list a:focus {
   color: #000;
-  box-shadow: var(--size-shadow-x-hover) var(--size-shadow-y-hover) var(--size-shadow-spread-hover) var(--color-shadow-hover);
+  box-shadow: var(--size-shadow-x-hover) var(--size-shadow-y-hover) var(--size-shadow-spread-hover) var(--color-shadow-dark-hover);
 }
 
