--- a/resources/sass/common/common.scss
+++ b/resources/sass/common/common.scss
@@ -25,3 +25,30 @@ a {
 		text-decoration: none;
 	}
 }
+
+[hidden] {
+	display: none;
+}
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
+
+	&-focusable {
+		&:active,
+		&:focus {
+			position: static;
+			width: auto;
+			height: auto;
+			overflow: visible;
+			clip: auto;
+			white-space: normal;
+		}
+	}
+}
