--- a/resources/sass/welcome.scss
+++ b/resources/sass/welcome.scss
@@ -85,13 +85,13 @@ $sportlink-color: #292929;
 		color: $sportlink-color;
 		text-decoration: none;
 		border-radius: var(--size-radius);
-		box-shadow: var(--size-shadow-x) var(--size-shadow-y) var(--size-shadow-spread) var(--color-shadow);
+		box-shadow: var(--size-shadow-x) var(--size-shadow-y) var(--size-shadow-spread) var(--color-shadow-dark);
 		transition: box-shadow linear 150ms, color linear 150ms;
 
 		&:hover,
 		&:focus {
 			color: #000;
-			box-shadow: var(--size-shadow-x-hover) var(--size-shadow-y-hover) var(--size-shadow-spread-hover) var(--color-shadow-hover);
+			box-shadow: var(--size-shadow-x-hover) var(--size-shadow-y-hover) var(--size-shadow-spread-hover) var(--color-shadow-dark-hover);
 		}
 	}
 }
