--- a/resources/sass/dashboard.scss
+++ b/resources/sass/dashboard.scss
@@ -2,8 +2,9 @@
 // @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
-@import 'variables';
+@import 'common/variables';
 @import 'common/common';
+
 @import 'components/container';
 @import 'components/columns';
 @import 'components/dropdown';
