--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -3,44 +3,7 @@
   --font-family-title: Montserrat, Verdana, sans-serif;
   --font-size-base: 1rem;
   --font-weight-base: 400;
-  --line-height-base: 1.6;
-  --size-container: 80rem;
-  --size-navbar-height: 4rem;
-  --size-navbar-font: 1.25rem;
-  --size-sidebar-width: 18rem;
-  --size-column-min-width: 22rem;
-  --size-radius: 2px;
-  --size-shadow-x: 0;
-  --size-shadow-x-hover: 0;
-  --size-shadow-y: 3px;
-  --size-shadow-y-hover: 4px;
-  --size-shadow-spread: 5px;
-  --size-shadow-spread-hover: 8px;
-  --color-navy: #326a8c;
-  --color-yellow: #f2a71b;
-  --color-orange: #f25749;
-  --color-red: #f25050;
-  --color-grey: #bfbfbf;
-  --color-body-bg: #f8fafc;
-  --color-body-color: #202020;
-  --color-navbar-bg: #f2a71b;
-  --color-navbar-color: #fff;
-  --color-shadow: rgba(0, 0, 0, 0.2);
-  --color-shadow-hover: rgba(0, 0, 0, 0.4);
-  --color-shadow-dark: rgba(0, 0, 0, 0.4);
-  --color-shadow-dark-hover: rgba(0, 0, 0, 0.7);
-  --color-sidebar-bg: #fff;
-  --color-sidebar: #202020;
-  --color-sidebar-disabled: #404040;
-  --color-sidebar-hover-bg: #fafafa;
-  --color-sidebar-hover: #323232;
-}
-
-:root {
-  --font-family-main: Helvetica Neue, Helvetica, Arial, sans-serif;
-  --font-family-title: Montserrat, Verdana, sans-serif;
-  --font-size-base: 1rem;
-  --font-weight-base: 400;
+  --font-weight-bold: 700;
   --line-height-base: 1.6;
   --size-container: 80rem;
   --size-navbar-height: 4rem;
