--- a/resources/sass/components/dropdown.scss
+++ b/resources/sass/components/dropdown.scss
@@ -9,6 +9,8 @@
 		display: block;
 		padding: 1.25em;
 		margin: 0;
+		font-size: 1em;
+		font-weight: var(--font-weight-base, normal);
 
 		&::after {
 			content: '>';
