--- a/resources/sass/components/sidebar.scss
+++ b/resources/sass/components/sidebar.scss
@@ -7,6 +7,7 @@
 	z-index: 97;
 	background-color: var(--color-sidebar-bg);
 	color: var(--color-sidebar);
+	overflow-y: auto;
 	box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow-dark);
 
 	a {
@@ -24,6 +25,17 @@
 
 	& ~ #main-content {
 		margin-left: var(--size-sidebar-width);
+	}
+}
+
+.sidebar-list {
+	.sidebar-list-title {
+		display: block;
+		padding: 1.25em;
+		margin: 2em 0 0;
+		color: var(--color-sidebar-disabled);
+		font-size: 1em;
+		font-weight: var(--font-weight-bold, bold);
 	}
 }
 
