--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -43,4 +43,6 @@ $colors: (
 	"sidebar-disabled": #404040,
 	"sidebar-hover-bg": #fafafa,
 	"sidebar-hover": #323232,
+	"table-border": #bfbfbf,
+	"table-stripe": #ffffff,
 );
