--- a/resources/sass/components/sidebar.scss
+++ b/resources/sass/components/sidebar.scss
@@ -7,6 +7,7 @@
 	z-index: 97;
 	background-color: var(--color-sidebar-bg);
 	color: var(--color-sidebar);
+	overflow-x: hidden;
 	overflow-y: auto;
 	box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow-dark);
 
