--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,7 +30,7 @@ $colors: (
 	"red": #f25050,
 	"grey": #bfbfbf,
 
-	"body-bg": #f8fafc,
+	"body-bg": #f4f4f4,
 	"body-color": #202020,
 	"navbar-bg": #f2a71b,
 	"navbar-color": #fff,
