--- a/resources/sass/common/table.scss
+++ b/resources/sass/common/table.scss
@@ -24,5 +24,11 @@ table {
 				background-color: var(--color-table-stripe);
 			}
 		}
+		tbody > tr:nth-child(2n + 1) {
+			th,
+			td {
+				background-color: var(--color-body-bg);
+			}
+		}
 	}
 }
