--- a/resources/sass/components/sidebar.scss
+++ b/resources/sass/components/sidebar.scss
@@ -2,14 +2,14 @@
 	position: fixed;
 	top: var(--size-navbar-height);
 	bottom: 0;
-	left: 0;
+	left: calc(-1 * var(--size-sidebar-width));
 	width: var(--size-sidebar-width);
 	z-index: 97;
 	background-color: var(--color-sidebar-bg);
 	color: var(--color-sidebar);
 	overflow-x: hidden;
 	overflow-y: auto;
-	box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow-dark);
+	transition: box-shadow linear 150ms, left linear 150ms;
 
 	a {
 		text-decoration: none;
@@ -25,7 +25,18 @@
 	}
 
 	& ~ #main-content {
-		margin-left: var(--size-sidebar-width);
+		transition: margin-left linear 150ms;
+	}
+}
+
+@media all and (min-width: map-get($sizes, "md")) {
+	#sidebar {
+		left: 0;
+		box-shadow: 0 0 var(--size-shadow-spread) var(--color-shadow-dark);
+
+		& ~ #main-content {
+			margin-left: var(--size-sidebar-width);
+		}
 	}
 }
 
