--- a/resources/sass/components/form.scss
+++ b/resources/sass/components/form.scss
@@ -60,6 +60,7 @@ button,
 	font-family: var(--font-family-main);
 	font-size: var(--font-size-base);
 	font-weight: var(--font-weight-base);
+	text-decoration: none;
 	background-color: var(--color-navy);
 	color: #fff;
 	border: 0;
