--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -8,7 +8,7 @@ $line-height-base: 1.6;
 
 // Sizes
 $sizes: (
-	// Responsive 
+	// Responsive
 	"sm": 30rem,
 	"md": 50rem,
 	"lg": 70rem,
@@ -39,6 +39,8 @@ $colors: (
 	// UI colors
 	"body-bg": #f4f4f4,
 	"body-color": #202020,
+	"input-border": #bfbfbf,
+	"input-focus-border": #326a8c,
 	"navbar-bg": #f2a71b,
 	"navbar-color": #fff,
 	"shadow": rgba(0, 0, 0, .2),
